2006-09-13 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/ImageThought.py:
	Clip title to only be actual filename (ignore path and suffix)
	
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	Add a cursor change when resizing images, reflecting direction of change


	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	Make loading and saving of image thoughts work.  Fingers crossed.
	Should work.
	Cleanup temp stuff from BaseThought

	* src/TextThought.py:
	* src/ImageThought.py:
	Make links originate and end in the center of thoughts
	which looks so much cooler :)
	
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/Makefile.am:
	* src/MMapArea.py:
	* src/ImageThought.py:
	Beginnings of an Image Thought.  New mode: "Add Image".  Dosn't drop out when image added though :(
	In edit mode, image can be resized
	In mode mode, image is moved
	Links are screwed up
	Doesn't save or load (hence still screws up any maps using them)
	Can't add text to images

    * src/MMapArea.py:
    Fix typo (Rogi Lemar)
    
    * src/BaseThought.py:
    * src/MainWindow.py:
    * src/MMapArea.py:
    * src/TextThought.py:
    New base thought type: resizable.  Will be used to contain drawings and images
    Hook up "New Image" Button to (temporarily) draw a basic resizable thought
    Fit everything else in required
    - Click-dragging (in edit mode) near a resizable thoughts edge will allow it to be resized
    - Move mode works as expected
    WARNING: as the resizable thought isn't fully supported, its likely to corrupt maps if used
    WARNING: No, really, any use of resizable thoughts is likely to destroy maps, creating random links
             and screwing everything up (They also aren't saved)

2006-09-09 Don Scorgie <DonScorgie@Blueyonder.co.uk>

    * src/MainWindow.py:
	* data/labyrinth-ui.xml:
	Added "add image" button in preperation for future work

    * src/Makefile.am:
    * src/defs.py.in:
	Fix compilation once again.  Sigh

